--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "NODE_ENV=production webpack --config config/webpack.config.js",
     "start-electron": "yarn electron electron.js",
     "start-electron-dev": "yarn electron electron.js dev",
-    "start": "NODE_ENV=development webpack-dev-server --mode development --hot --progress --color --port 9000 --config config/webpack.dev.config.js"
+    "start-webpack-dev-server": "NODE_ENV=development webpack-dev-server --mode development --hot --progress --color --port 9000 --config config/webpack.dev.config.js",
+    "start": "yarn npm-run-all --parallel start-electron-dev start-webpack-dev-server"
   },
   "author": "Philipp Weitz",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "babel-preset-react-app": "9.0.2",
     "electron": "7.0.0",
     "html-webpack-plugin": "3.2.0",
+    "npm-run-all": "4.1.5",
     "prettier": "1.16.4",
     "react": "16.8.6",
     "react-dom": "16.8.6",
